fix cta text alignment

--- a/src/components/call-to-action.css
+++ b/src/components/call-to-action.css
@@ -8,6 +8,7 @@
     justify-content: center;
     align-items: center;
     background: red;
+    text-align: center;
     text-wrap: pretty;
     text-decoration: none;
     color: white;
